crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, a, f)\n   VALUES ('f', 26, '(11111,33333),(22222,44444)'::polygon);"
---
InsertStmt@0..93
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "f"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..91
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..91
      AConst@44..47
        Sconst@44..47 "'f'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..51
        Iconst@49..51 "26"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      TypeCast@53..91
        AConst@53..82
          Sconst@53..82 "'(11111,33333),(22222 ..."
        Typecast@82..84 "::"
        TypeName@84..91
          Ident@84..91 "polygon"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

