crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, c, f)\n   VALUES ('f', 'hi jeff'::name,\n           '(111111,333333),(222222,444444)'::polygon);"
---
InsertStmt@0..121
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "c"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "f"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..119
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..119
      AConst@44..47
        Sconst@44..47 "'f'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      TypeCast@49..64
        AConst@49..58
          Sconst@49..58 "'hi jeff'"
        Typecast@58..60 "::"
        TypeName@60..64
          NameP@60..64 "name"
      Ascii44@64..65 ","
      Newline@65..66 "\n"
      Whitespace@66..77 "           "
      TypeCast@77..119
        AConst@77..110
          Sconst@77..110 "'(111111,333333),(222 ..."
        Typecast@110..112 "::"
        TypeName@112..119
          Ident@112..119 "polygon"
  Ascii41@119..120 ")"
  Ascii59@120..121 ";"

