crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, c) VALUES ('f', 'hi carl'::name);"
---
InsertStmt@0..60
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "c"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..58
    Values@30..36 "VALUES"
    Whitespace@36..37 " "
    Ascii40@37..38 "("
    List@38..58
      AConst@38..41
        Sconst@38..41 "'f'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      TypeCast@43..58
        AConst@43..52
          Sconst@43..52 "'hi carl'"
        Typecast@52..54 "::"
        TypeName@54..58
          NameP@54..58 "name"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

