crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@54.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, e) VALUES ('f', '-12'::int2);"
---
InsertStmt@0..56
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "e"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..54
    Values@30..36 "VALUES"
    Whitespace@36..37 " "
    Ascii40@37..38 "("
    List@38..54
      AConst@38..41
        Sconst@38..41 "'f'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      TypeCast@43..54
        AConst@43..48
          Sconst@43..48 "'-12'"
        Typecast@48..50 "::"
        TypeName@50..54
          Ident@50..54 "int2"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

