crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE f_star (\n\tf \t\t\tpolygon\n) INHERITS (e_star);"
---
CreateStmt@0..56
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "f_star"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  Newline@21..22 "\n"
  Newline@22..23 "\t"
  ColumnDef@23..35
    Ident@23..24 "f"
    Whitespace@24..25 " "
    Newline@25..28 "\t\t\t"
    TypeName@28..35
      Ident@28..35 "polygon"
  Newline@35..36 "\n"
  Ascii41@36..37 ")"
  Whitespace@37..38 " "
  Inherits@38..46 "INHERITS"
  Whitespace@46..47 " "
  Ascii40@47..48 "("
  RangeVar@48..54
    Ident@48..54 "e_star"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

